remove isBlank String function.